--- a/html-files/style.css
+++ b/html-files/style.css
@@ -1,77 +1,19 @@
-html {
-    background-color: gray;
-    color: aqua; 
+h1 {
+    text-align: center;
 }
 
 p {
-    font-size: xx-large;
+    text-align: center;
+    font-size: larger;
+}
+
+* {
+    background-color: gray;
+    color: aqua;
+    font-family: cursive;
 }
 
 img {
     height: 550px;
     width: 550px;
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-}
-
-button {
-    font-size: x-large;
-}
-
-.search-input {
-    font-size: large;
-}
-
-.popup-overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-}
-
-.popup {
-font-family: Arial, sans-serif;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #484747;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.popup-content {
-    text-align: center;
-}
-
-.popup .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
-    color: #333;
-}
-
-.popup #emailInput {
-    width: 80%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-.popup button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
 }
